[bug][header]: fix vertical align of menu icons

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -21,6 +21,7 @@
 
 .menu-main-promotions {
 	font-size: 1.6rem;
+	margin-top: 10px;
 }
 
 .mega-menu-list {
@@ -38,12 +39,12 @@
 	font-size: 1.5rem;
 }
 
-.mega-menu-list--item a{
+.mega-menu-list--item a {
 	text-transform: capitalize;
 	font-weight: 500;
 }
 
-.mega-menu--main{
+.mega-menu--main {
 	position: relative;
 	border: 1px solid #040505;
 	border-bottom: none;
@@ -52,6 +53,7 @@
 	background-color: #f5f5f5;
 	padding-right: 0;
 	padding-left: 0;
+	height: 100px;
 }
 
 .stories {
@@ -126,6 +128,7 @@
 	display: inline-block;
 	position: relative;
 	top: 5px;
+	margin-right: 10%
 }
 
 .fit-guarantee {
